<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/background"
    android:orientation="vertical">

...
                    android:animateLayoutChanges="true"
                    android:background="@drawable/back_button_background"
                    android:padding="15dp"
                    app:srcCompat="@drawable/ic_arrow_left" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/nameTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:ellipsize="end"
                    android:gravity="center"
...
