...
                    android:textAppearance="@style/TextAppearance.App.Headline4.Gray" />

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvVenues"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fadeScrollbars="false"
                android:paddingHorizontal="15dp"
                android:paddingVertical="20dp"
                android:scrollbarStyle="outsideInset"
...
